# tauri-mark

./: .gitignore  CLAUDE.md  bash.exe.stackdump  build-tauri.bat  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
.claude/rules/: api.md  components.md  frontend.md
backend/: .gitignore  README.md  pom.xml
backend/sql/: schema.sql
backend/src/main/java/com/taurimark/: TauriMarkApplication.java
backend/src/main/resources/: application.yml
docs/: image-storage-optimization.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/api/: auth.ts  memo.ts
src/api/type/: memo.ts  response.ts
src/assets/: variables.css
src/axios/: client.ts
src/components/: AppSidebar.vue  CalendarView.vue  CustomCalendar.vue  TitleBar.vue
src/components/common/: AppSidebar.vue  CalendarView.vue  CommonDialog.vue  TitleBar.vue
src/router/: index.ts
src/stores/: auth.ts  cursor.ts  memo.ts  sidebar.ts  trash.ts  weather.ts
src/styles/: global.css
src/views/: CalendarPage.vue  DayMemos.vue  LoginPage.vue  MemoEditor.vue  MemoList.vue  Settings.vue  TrashView.vue  WeekSummary.vue
src/views/calendar/: day.vue  index.vue  week.vue
src/views/calendar/common/: CustomCalendar.vue
src/views/home/: editor.vue  index.vue
src/views/home/common/: ImportDialog.vue  PasswordDialog.vue
src/views/login/: index.vue
src/views/pet/: index.vue
src/views/settings/: index.vue
src/views/trash/: index.vue
(+16 files in other folders)
