[package]
name = "tauri-mark"
version = "0.1.0"
description = "A Tauri Memo App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_mark_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tauri-mark"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.21"
